--- a/lego.ipynb
+++ b/lego.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "f3fbcf60-7e40-4937-a347-3a71fab6dd65",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "2acabec8-dce7-4151-9913-7c2296449c35",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "c98b7242-2ad9-4eff-babf-c884e2ce1d3e",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows: 14\n",
+      "Number of rows: 16\n",
       "  lp                                      nazwa zestawu nr zestawu  \\\n",
       "0  1                          Pandy na Chiński Nowy Rok      40466   \n",
       "1  2  Maska Batmana z klasycznego serialu telewizyjnego      76238   \n",
@@ -64,19 +64,26 @@
       "3      Gratis            0.0           1     0.00 zł           lego   \n",
       "4  BrickHeadz         179.99           3   539.97 zł           lego   \n",
       "\n",
-      "   data kupna data sprzedania  teraz     zysk suma sprz czas inwestycji  \\\n",
-      "0  29/11/2022                    120  222.26%     600.0             710   \n",
-      "1  29/11/2022                  199.0  101.54%     597.0             710   \n",
-      "2  29/11/2022                    489  110.89%     978.0             710   \n",
-      "3  29/11/2022                  34.99  #DIV/0!     34.99             710   \n",
-      "4  02/06/2023                    235  130.56%     705.0             525   \n",
+      "   data kupna data sprzedania  teraz not teraz     zysk  czas  \\\n",
+      "0  29/11/2022                    120       120  122.26%  1.92   \n",
+      "1  29/11/2022                  199.0     199.0    1.54%  1.92   \n",
+      "2  29/11/2022                    489       489   10.89%  1.92   \n",
+      "3  29/11/2022                  34.99     34.99  #DIV/0!  1.92   \n",
+      "4  02/06/2023                    235       235   30.56%  1.42   \n",
       "\n",
-      "  pkt vip                                              check             xyz  \n",
-      "0          https://promoklocki.pl/lego-brickheadz-40466-p...                  \n",
-      "1          https://promoklocki.pl/lego-dc-super-heroes-76...  suma wydanych:  \n",
-      "2          https://promoklocki.pl/lego-harry-potter-76393...     3,044.78 zł  \n",
-      "3          https://promoklocki.pl/lego-promocyjne-40512-z...         4421.51  \n",
-      "4          https://promoklocki.pl/lego-brickheadz-40623-b...         145.22%  \n"
+      "  percent per year suma sprz czas inwestycji pkt vip  \\\n",
+      "0           63.79%     600.0             710           \n",
+      "1            0.80%     597.0             710           \n",
+      "2            5.68%     978.0             710           \n",
+      "3          #DIV/0!     34.99             710           \n",
+      "4           21.57%     705.0             525           \n",
+      "\n",
+      "                                               check             xyz  \n",
+      "0  https://promoklocki.pl/lego-brickheadz-40466-p...                  \n",
+      "1  https://promoklocki.pl/lego-dc-super-heroes-76...  suma wydanych:  \n",
+      "2  https://promoklocki.pl/lego-harry-potter-76393...     5,023.78 zł  \n",
+      "3  https://promoklocki.pl/lego-promocyjne-40512-z...         4421.51  \n",
+      "4  https://promoklocki.pl/lego-brickheadz-40623-b...          88.01%  \n"
      ]
     }
    ],
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "45ad4066-4626-442c-ac95-62ec286d036d",
    "metadata": {},
    "outputs": [],
@@ -136,10 +143,10 @@
     "        if price_tag:\n",
     "            price = price_tag.get_text()  # Extract the price text\n",
     "        else:\n",
-    "            price = 'Price not found'\n",
+    "            price = 0\n",
     "        print(price)\n",
     "    else:\n",
-    "        price = 'Price section not found'\n",
+    "        price = 0\n",
     "    # Quit the driver\n",
     "    driver.quit()\n",
     "    return price\n"
@@ -147,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "d7d477e6-dff9-4c9d-b74b-1b0b0777cbbf",
    "metadata": {},
    "outputs": [],
@@ -166,12 +173,12 @@
     "        # Convert to a float\n",
     "        return float(price_text)\n",
     "    else:\n",
-    "        return float(\"nan\")  # Return NaN for any non-string values\n"
+    "        return float(price_text)  # Return NaN for any non-string values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "b7158181-95c6-490b-bbdd-2ef45171b939",
    "metadata": {},
    "outputs": [
@@ -217,8 +224,14 @@
       "79,00 zł\n",
       "URL passed to priceGen: https://promoklocki.pl/lego-promocyjne-40585-swiat-cudow-p22208\n",
       "Tytuł strony: LEGO 40585 Promocyjne Świat cudów - porównaj ceny - promoklocki.pl\n",
-      "114,56 zł\n",
-      "Time passed: 126.42 seconds\n"
+      "114,90 zł\n",
+      "URL passed to priceGen: https://promoklocki.pl/lego-ideas-21333-gwiazdzista-noc-vincenta-van-gogha-p21932\n",
+      "Tytuł strony: LEGO 21333 Ideas „Gwiaździsta noc” Vincenta van Gogha - porównaj ceny - promoklocki.pl\n",
+      "629,00 zł\n",
+      "URL passed to priceGen: https://promoklocki.pl/lego-creator-expert-10283-nasa-discovery-space-shuttle-p21297\n",
+      "Tytuł strony: LEGO 10283 Creator Expert NASA Discovery Space Shuttle - porównaj ceny - promoklocki.pl\n",
+      "675,00 zł\n",
+      "Time passed: 169.62 seconds\n"
      ]
     }
    ],
@@ -234,7 +247,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
+   "id": "cb9d1b96-ad8c-45fb-ac75-3d6851b4fa3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     120,00 zł\n",
+      "1     199,00 zł\n",
+      "2     489,00 zł\n",
+      "3      34,99 zł\n",
+      "4     235,00 zł\n",
+      "5      75,00 zł\n",
+      "6      79,00 zł\n",
+      "7     182,69 zł\n",
+      "8      58,99 zł\n",
+      "9      75,00 zł\n",
+      "10    239,90 zł\n",
+      "11     79,00 zł\n",
+      "12    114,90 zł\n",
+      "13    629,00 zł\n",
+      "14    675,00 zł\n",
+      "Name: teraz, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['teraz'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "0b1bad61-70e8-4392-af02-326f082ed0ef",
    "metadata": {},
    "outputs": [
@@ -254,21 +300,25 @@
       "Debug: <class 'str'> 75,00 zł\n",
       "Debug: <class 'str'> 239,90 zł\n",
       "Debug: <class 'str'> 79,00 zł\n",
-      "Debug: <class 'str'> 114,56 zł\n",
-      "0      120.0\n",
-      "1      199.0\n",
-      "2      489.0\n",
+      "Debug: <class 'str'> 114,90 zł\n",
+      "Debug: <class 'str'> 629,00 zł\n",
+      "Debug: <class 'str'> 675,00 zł\n",
+      "0     120.00\n",
+      "1     199.00\n",
+      "2     489.00\n",
       "3      34.99\n",
-      "4      235.0\n",
-      "5       75.0\n",
-      "6       79.0\n",
+      "4     235.00\n",
+      "5      75.00\n",
+      "6      79.00\n",
       "7     182.69\n",
       "8      58.99\n",
-      "9       75.0\n",
-      "10     239.9\n",
-      "11      79.0\n",
-      "12    114.56\n",
-      "Name: teraz, dtype: object\n"
+      "9      75.00\n",
+      "10    239.90\n",
+      "11     79.00\n",
+      "12    114.90\n",
+      "13    629.00\n",
+      "14    675.00\n",
+      "Name: teraz, dtype: float64\n"
      ]
     }
    ],
@@ -276,12 +326,15 @@
     "# Test clean_price on your data\n",
     "df.loc[:, 'teraz'] = df['teraz'].apply(clean_price)\n",
     "\n",
+    "# Replace 0 in 'teraz' with the value from 'not_teraz' for the same row\n",
+    "df['teraz'] = df.apply(lambda row: row['not_teraz'] if row['teraz'] == 0 else row['teraz'], axis=1)\n",
+    "\n",
     "print(df['teraz'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "33375246-1d0c-42e1-8aca-93bac56d7348",
    "metadata": {},
    "outputs": [
@@ -312,52 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "8097266c-ebf5-4473-9cc6-76124a140393",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URL passed to priceGen: https://promoklocki.pl/lego-brickheadz-40466-pandy-na-chinski-nowy-rok-p21201\n",
-      "Tytuł strony: LEGO 40466 BrickHeadz Pandy na Chiński Nowy Rok - porównaj ceny - promoklocki.pl\n",
-      "120,00 zł\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sitko\\AppData\\Local\\Temp\\ipykernel_12204\\1049080703.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '120,00 zł' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[index, 'teraz'] = priceGen(df.loc[index, 'check'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URL passed to priceGen: https://promoklocki.pl/lego-dc-super-heroes-76238-maska-batmana-z-klasycznego-serialu-telewizyjnego-p21439\n",
-      "Tytuł strony: LEGO 76238 DC Super Heroes Maska Batmana z klasycznego serialu telewizyjnego - porównaj ceny - promoklocki.pl\n",
-      "199,00 zł\n",
-      "URL passed to priceGen: https://promoklocki.pl/lego-harry-potter-76393-harry-potter-i-hermiona-granger-p21316\n",
-      "Tytuł strony: LEGO 76393 Harry Potter Harry Potter i Hermiona Granger - porównaj ceny - promoklocki.pl\n",
-      "489,00 zł\n",
-      "URL passed to priceGen: https://promoklocki.pl/lego-promocyjne-40512-zabawa-i-styl-zestaw-dodatkowy-vip-p22004\n",
-      "Tytuł strony: LEGO 40512 Promocyjne Zabawa i styl - zestaw dodatkowy VIP - porównaj ceny - promoklocki.pl\n",
-      "34,99 zł\n",
-      "URL passed to priceGen: https://promoklocki.pl/lego-brickheadz-40623-bohaterowie-bitwy-o-endor-p22295\n",
-      "Tytuł strony: LEGO 40623 BrickHeadz Bohaterowie bitwy o Endor - porównaj ceny - promoklocki.pl\n",
-      "235,00 zł\n",
-      "                                               check      teraz\n",
-      "0  https://promoklocki.pl/lego-brickheadz-40466-p...  120,00 zł\n",
-      "1  https://promoklocki.pl/lego-dc-super-heroes-76...  199,00 zł\n",
-      "2  https://promoklocki.pl/lego-harry-potter-76393...  489,00 zł\n",
-      "3  https://promoklocki.pl/lego-promocyjne-40512-z...   34,99 zł\n",
-      "4  https://promoklocki.pl/lego-brickheadz-40623-b...  235,00 zł\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Loop through the first 5 rows and set the 'teraz' column\n",
     "# for index in range(5):\n",
@@ -369,38 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "bfb4b897-da21-4fad-b230-1ec523056b86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      53.99\n",
-      "1     195.99\n",
-      "2     440.99\n",
-      "3        0.0\n",
-      "4     179.99\n",
-      "5        0.0\n",
-      "6      44.99\n",
-      "7     119.99\n",
-      "8        0.0\n",
-      "9        0.0\n",
-      "10    179.99\n",
-      "11     44.99\n",
-      "12       0.0\n",
-      "Name: cena wejściowa, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df['cena wejściowa'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "id": "d79b2d26-4c0e-49c8-9ec2-aaed8dfb6fca",
    "metadata": {},
    "outputs": [
@@ -408,9 +398,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cash in = 3044.78\n",
-      "Cash out = 4421.51\n",
-      "Profit = 45.22%\n"
+      "Cash in = 5023.78\n",
+      "Cash out = 6400.85\n",
+      "Profit = 27.41%\n"
      ]
     }
    ],
