--- a/finale.ipynb
+++ b/finale.ipynb
@@ -119,7 +119,7 @@
     "# changing format to dataframe\n",
     "dataset_all.set_format(type=\"pandas\")\n",
     "\n",
-    "df = dataset_all[\"train\"][:10] \n",
+    "df = dataset_all[\"train\"]\n",
     "\n",
     "# dropping comments that are empty\n",
     "df = df.dropna(subset=['comments']) \n",
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "id": "8b848be0-bb06-46b1-8f62-7d58efa6b1d9",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "['my_model.pkl']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
